# hdfs-benchmark

./: .gitignore  CMakeLists.txt  Readme.md  benchmark.rb  main.cpp  run.rb
cmake_modules/: Findlibhadoop.cmake  Findlibhdfs.cmake  Findparquet.cmake  Findthrift.cmake
scripts/: benchmark.rb  benchmark_dd.rb  benchmark_file_reader.rb  benchmark_remote.rb
src/: Block.cpp  Block.h  CMakeLists.txt  ColumnChunk.cpp  ColumnChunk.h  Compare.cpp  Compare.h  HdfsReader.cpp  HdfsReader.h  ParquetFile.cpp  ParquetFile.h  PriorityQueue.cpp  PriorityQueue.h  Query.cpp  Query.h  RowGroup.cpp  RowGroup.h  Table.cpp  Table.h  expect.h  log.h  main.cpp  options.h  q1.cpp  q14.cpp  q17.cpp  sha256.cpp
src/file_reader/: CMakeLists.txt  main.cpp
src/hdfs_reader/: CMakeLists.txt  main.cpp  options.h
src/queries/: Block.cpp  Block.h  CMakeLists.txt  ColumnChunk.h  HdfsReader.h  log.h  main.cpp  q1.cpp  q14.cpp  q17.cpp
